# Stage_Baptiste

./: .gitignore  Further_study_of_GKP_EC.pptx  Untitled.ipynb  pyproject.toml  ~$Further_study_of_GKP_EC.pptx
stage_baptiste/: finite_GKP.py
stage_baptiste/Basic_GKP_tests/: Basic_GKP_tests.py
stage_baptiste/homemades/: KrausOperator_JV.py  KrausOperators.py  KrausOperators_original.py  finite_GKP.py  general_funcs.py  my_funcs.py
stage_baptiste/projects/Basic_GKP_operations/: Basic_GKP_operations.py
stage_baptiste/projects/Basic_GKP_tests/: Basic_GKP_operations.py  Basic_GKP_tests.py
stage_baptiste/projects/Kraus_codes/: Kraus_code.py  matplotlibrc
stage_baptiste/projects/Kraus_codes/color_maps/: bins_test.py  color_maps.py  colors_maps_analysis.py
stage_baptiste/projects/Kraus_codes/various_tests/: Kraus_code.py
stage_baptiste/projects/Other_GKPs/: GKP_8.py
stage_baptiste/projects/Other_GKPs/GKP_4/: F_Fock_composition.py  GKP_4.py
stage_baptiste/projects/Other_GKPs/GKP_4/F_tests/: F_Fock_composition.py
stage_baptiste/projects/Other_GKPs/GKP_8/: GKP_8.py
stage_baptiste/projects/Pieceable_sqrtH/: animation_analysis.py  graph_test.py
stage_baptiste/projects/T_gate/: T_gate.py
stage_baptiste/projects/Wigner_test_for_finite_GKP/: Wigner_test.py
tests/: test_stage_baptiste.py
